--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "pod": "cd ios && pod-install"
+    "pod": "cd ios && pod install"
   },
   "dependencies": {
+    "@types/react": "~18.2.14",
     "expo": "~49.0.18",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "styled-components": "^6.1.8",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
