--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-svg": "^14.1.0",
     "styled-components": "^6.1.8",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "private": true
 }
