feat structuring the remaining screens and configuring the routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "plugins": [
+      {
+          "name": "@styled/typescript-styled-plugin"
+      }
+  ]
+  },
   "extends": "expo/tsconfig.base"
 }
