--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "ios": "expo run:ios",
     "pod": "cd ios && pod install"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@styled/typescript-styled-plugin": "^1.0.1",
     "@types/react": "~18.2.14",
     "expo": "~49.0.18",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "^14.1.0",
-    "styled-components": "^6.1.8",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
