--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "^14.1.0",
     "typescript": "^5.3.3"
   },
