--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
-    "android": "expo run:android",
+    "android": "expo run:android -d Pixel_3_API_34",
     "ios": "expo run:ios",
     "pod": "cd ios && pod install"
   },
@@ -28,6 +28,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "^14.1.0",
+    "toggle-switch-react-native": "^3.3.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
