feat: add radius in components

--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     ],
     "ios": {
       "bundleIdentifier": "Calculadora-BTUs"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
