--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
-    "android": "expo run:android -d Pixel_8_Pro_API_34",
+    "android": "expo run:android -d Pixel_8",
     "ios": "expo run:ios",
     "pod": "cd ios && pod install"
   },
@@ -17,19 +17,19 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@styled/typescript-styled-plugin": "^1.0.1",
     "@types/react": "~18.2.14",
-    "expo": "~49.0.18",
+    "expo": "^51",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "~11.4.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo-font": "~12.0.7",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "15.2.0",
     "toggle-switch-react-native": "^3.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
